<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_dye">程序添加 - 转膜</string>
    <string name="add_transfer">程序添加 - 染色</string>
    <string name="anomaly_detection">异常检测</string>
    <string name="app_name">转膜仪</string>
    <string name="audio">语音播报</string>
    <string name="auto_clean_duration">废液清理时长</string>
    <string name="auto_clean_interval">废液清理间隔</string>
    <string name="buffer_type">缓冲液种类</string>
    <string name="chart_description">X轴为时间，左Y轴为电压，右Y轴为电流</string>
    <string name="current_hint">电流 A</string>
    <string name="delete_log">删除日志</string>
    <string name="delete_program">删除程序</string>
    <string name="duration">时长 MIN</string>
    <string name="dye">染色</string>
    <string name="experiment_time">实验日期</string>
    <string name="factory">厂家</string>
    <string name="fill_back_speed">填充/回吸转速</string>
    <string name="glue_075">0.75</string>
    <string name="glue_10">1.0</string>
    <string name="glue_15">1.5</string>
    <string name="glue_concentration">梯度胶浓度</string>
    <string name="glue_concentration_normal">常规胶浓度</string>
    <string name="glue_thickness">胶厚度</string>
    <string name="glue_type">胶种类</string>
    <string name="gradient_glue">梯度胶</string>
    <string name="manual_pumping">手动抽水</string>
    <string name="module_a_b_exception">模块A、B电流异常,可能存在以下问题:\n 1、A、B模块未插好\n 2、特殊胶体，请关闭异常检测</string>
    <string name="module_a_exception">模块A电流异常,可能存在以下问题:\n 1、A模块未插好\n 2、特殊胶体，请关闭异常检测</string>
    <string name="module_b_exception">模块B电流异常,可能存在以下问题:\n 1、B模块未插好\n 2、特殊胶体，请关闭异常检测</string>
    <string name="module_exception">模块异常</string>
    <string name="module_mode">模块-模式</string>
    <string name="name_already_exists">名称已存在</string>
    <string name="no_data">暂无数据</string>
    <string name="no_log">没有相关日志</string>
    <string name="normal_glue">常规胶</string>
    <string name="notice_content">1. 请确认模块已经完全插入并正确识别后开始实验。\n2. 请确保管路正确安装后开始实验。\n3. 请勿在实验进行中插拔模块。\n4. 请在实验完成后清洗管路。\n5. 请不要长时间连续染色（大于8分钟），避免模块过热形变。\n6. 请不要重复回收使用滤纸。\n7. 请在阅读使用说明后使用。</string>
    <string name="off">OFF</string>
    <string name="other">其他</string>
    <string name="other_buffer_info">其他缓冲液信息</string>
    <string name="parameter">参数(转速-电压-时长)</string>
    <string name="program_name">程序名</string>
    <string name="protein_name">使用蛋白名称</string>
    <string name="protein_size">蛋白大小范围</string>
    <string name="speed">泵速 RPM</string>
    <string name="speed_hint">转速 RPM</string>
    <string name="title_admin">管理员</string>
    <string name="title_dye">染色</string>
    <string name="title_home">转膜/染色</string>
    <string name="title_log">实验日志</string>
    <string name="title_log_chart">电压图/电流图</string>
    <string name="title_program">实验程序</string>
    <string name="title_transfer">转膜</string>
    <string name="transfer">转膜</string>
    <string name="voltage">电压 V</string>
    <string name="wash">洗涤</string>
    <string name="weather_delete">是否删除</string>
    <string name="acceleration">加速度</string>
    <string name="acceleration_exception">加速度范围为10–100</string>
    <string name="action">操作</string>
    <string name="active">选中</string>
    <string name="actual_volume">实际加液体积 μL</string>
    <string name="add">添加</string>
    <string name="add_liquid">加液</string>
    <string name="already_exists">已存在</string>
    <string name="already_latest_version">已是最新版本</string>
    <string name="back">回吸</string>
    <string name="cancel">返回</string>
    <string name="check_update">检查更新</string>
    <string name="checking_for_updates">正在检查更新中</string>
    <string name="close">关闭</string>
    <string name="complete">执行完成</string>
    <string name="confirm">确认</string>
    <string name="coordinate_mode">坐标模式</string>
    <string name="deceleration">减速度</string>
    <string name="deceleration_exception">减速度范围为10–100</string>
    <string name="def">默认</string>
    <string name="delete">删除</string>
    <string name="device_info">设备信息</string>
    <string name="download_failed">下载失败,请重试!</string>
    <string name="edit">编辑</string>
    <string name="expect_volume">"预计加液体积 μL "</string>
    <string name="failed_generate_qrcode">生成二维码失败</string>
    <string name="failed_get_version_information">获取版本信息失败,请重试!</string>
    <string name="fill">填充</string>
    <string name="finish">完成</string>
    <string name="go_on">继续</string>
    <string name="incremental_mode">增量模式</string>
    <string name="input_name">请输入名字</string>
    <string name="input_password">请输入密码</string>
    <string name="instructions_for_use">使用说明</string>
    <string name="language">语言</string>
    <string name="mode">模式</string>
    <string name="motor">电机</string>
    <string name="move">移动</string>
    <string name="navigation">导航栏</string>
    <string name="new_local_update">发现本地新版本</string>
    <string name="new_remote_update">发现在线新版本</string>
    <string name="new_version">发现新版本</string>
    <string name="no_network_usb">请连接网络或插入升级U盘</string>
    <string name="not_empty">不能为空</string>
    <string name="not_found">未找到</string>
    <string name="notice">提示信息</string>
    <string name="order">序号</string>
    <string name="over_the_trip">超过最大行程</string>
    <string name="password_incorrect">密码错误</string>
    <string name="pause">暂停</string>
    <string name="permission_authentication">权限认证</string>
    <string name="plate">板</string>
    <string name="point">孔</string>
    <string name="press_and_hold_to_reset">长按复位</string>
    <string name="protected_settings">受保护设置</string>
    <string name="pump">泵</string>
    <string name="qrcode">微信扫码关注公众号</string>
    <string name="reset">复位</string>
    <string name="reset_success">复位成功</string>
    <string name="resetting">复位中</string>
    <string name="running">机器正在运行中</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="speed_exception">速度不能小于0</string>
    <string name="start">开始</string>
    <string name="start_downloading">开始下载</string>
    <string name="status">状态</string>
    <string name="stop">停止</string>
    <string name="stop_all">请中止所有程序</string>
    <string name="subdivision">细分</string>
    <string name="to">~</string>
    <string name="total">总计</string>
    <string name="update_success">更新成功</string>
    <string name="updating">正在更新中</string>
    <string name="upgrade">升级</string>
    <string name="version">软件版本</string>
    <string name="wait_time">等待时间</string>
    <string name="waste_tank">废液槽</string>
    <string name="website">官方网站</string>
    <string name="whether_delete">是否删除</string>
    <string name="whether_to_update">是否更新?</string>
    <string name="wifi_setting">WIFI设置</string>
</resources>