<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zktony.www.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_program"
        android:name="com.zktony.www.ui.ProgramFragment"
        android:label="@string/title_program"
        tools:layout="@layout/fragment_program" />

    <fragment
        android:id="@+id/navigation_log"
        android:name="com.zktony.www.ui.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" >
        <action
            android:id="@+id/action_navigation_log_to_navigation_log_chart"
            app:destination="@id/navigation_log_chart"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_log_chart"
        android:name="com.zktony.www.ui.LogChartFragment"
        android:label="@string/title_log_chart"
        tools:layout="@layout/fragment_log_chart" >
        <action
            android:id="@+id/action_navigation_log_chart_to_navigation_log"
            app:destination="@id/navigation_log"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.zktony.www.ui.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" />

</navigation>