<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@color/light_onPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:text="@string/coordinate_waste"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@id/input_v2"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/move"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_700"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/move"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:rippleColor="@color/purple_700"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:rippleColor="@color/purple_700"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_outline"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:rippleColor="@color/purple_700"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>