<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/light_onPrimary"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/waste"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="NestedWeights,UseCompoundDrawables">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/square"
            tools:ignore="ContentDescription,VisualLintBounds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/waste_tank"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wash"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="NestedWeights,UseCompoundDrawables,TextSizeCheck">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/pipeline"
            tools:ignore="ContentDescription,VisualLintBounds,ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/line_cleaning"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fill"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="NestedWeights,UseCompoundDrawables">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/right"
            tools:ignore="ContentDescription,VisualLintBounds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/fill"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="NestedWeights,UseCompoundDrawables,VisualLintBounds">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/left"
            tools:ignore="ContentDescription,VisualLintBounds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/close"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="NestedWeights,UseCompoundDrawables,VisualLintBounds">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/close"
            tools:ignore="ContentDescription,VisualLintBounds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/close"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>