<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/dark_onBackground"
        android:orientation="vertical"
        tools:context=".ui.log.LogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/order"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="4"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/experiment_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="2"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/module_mode"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="3"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/parameter"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="2"
                android:backgroundTint="@color/light_onPrimary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:icon="@mipmap/search"
                app:iconGravity="textStart"
                app:iconSize="32dp"
                app:iconTint="@null"
                app:rippleColor="@color/purple_700"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/start_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="4"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="2"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="4"
                android:background="@color/light_onPrimary"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="2"
                android:background="@color/light_onPrimary"
                android:scaleType="fitCenter"
                android:src="@mipmap/search"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        </LinearLayout>

        <ImageView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/empty"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            tools:listitem="@layout/item_log" />

    </LinearLayout>

</layout>


